--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -11,13 +11,13 @@
 
 cmake_minimum_required(VERSION 3.9)
 
-project(JumpstartedSkeletonSimplifiedTestConan)
+project(ConanDemoTestConan)
 
-find_package(JumpstartedSkeletonSimplified REQUIRED)
+find_package(ConanDemo REQUIRED)
 
 set(CMAKE_CXX_STANDARD 11)
 add_executable(${PROJECT_NAME} ${PROJECT_NAME})
-target_link_libraries(${PROJECT_NAME} PUBLIC JumpstartedSkeletonSimplified::jumpstartedskeletonsimplified-lib)
+target_link_libraries(${PROJECT_NAME} PUBLIC ConanDemo::conandemo-lib)
 
 enable_testing()
 add_test(NAME ${PROJECT_NAME}
